# SP0256-AL2-Pico-Emulation-Detail

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
include/: allophoneDefs.h  allophones.h  main.h  pins_seeed_xiao_rp2040.h  ws2812.h
src/: main.cpp  ws2812.cpp  ws2812_parallel.c
